[package]
name = "scrabby-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bincode = "1.3.3"
colored = "2.0.0"
lazy_static = "1.4.0"
scrabby = { version = "0.1.0", path = "../scrabby", features = ["serde"] }
#scrabby = { version = "0.1.0", git = "https://github.com/Dark42ed/scrabby.git", features = ["serde"] }
serde = "1.0.164"
serde_derive = "1.0.164"

[profile.release]
lto = true
strip = true
codegen-units = 1
